2002-07-30  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03282] Re: w3m-img for framebuffer update
	* w3mimg/fb/fb.c (fb_image_new): ignore no image
					calloc multiple images
			(fb_image_fill): added
			(fb_image_draw): width, height fix
			(fb_image_rotate): fix typo
			(fb_image_copy): added
			(fb_frame_new): added
			(fb_freme_free): added
			(fb_frame_rotate): added
	* w3mimg/fb/fb.h (FB_IMAGE): add num, id, delay
			(fb_frame_new): added
			(fb_frame_free): added
			(fb_frame_rotate): added
	* w3mimg/fb/fb_gdkpixbuf.c (get_image_size): animation support
			(fb_image_load): animation support
			(draw): add bg, x, y, w, h args
	* w3mimg/fb/fb_img.h (fb_image_load): return FB_IMAGE**
	* w3mimg/fb/fb_imlib2.c (fb_image_load): return FB_IMAGE**
	* w3mimg/fb/fb_w3mimg.c (w3mfb_show_image): animation support

2002-07-23  Hiroyuki Ito <hito@crl.go.jp>

	* [w3m-dev 03280] w3m-img without w3mimgsize
	* fm.h (Imagesize): deleted
	* image.c (getImageSize): rewrite to use w3mimgdisplay 
		instead of w3mimgsize
	* rc.c (params1): remove imgsize, merged to imgdisplay

2002-07-23  Hiroyuki Ito <hito@crl.go.jp>
	
	* [w3m-dev 03279] w3m-img for framebuffer update
	  http://homepage3.nifty.com/slokar/fb/w3mfb.patch.gz
	* w3mimg/fb/readme.txt: update
	* w3mimg/fb/fb.c: update
	* w3mimg/fb/fb.h: update
	* w3mimg/fb/fb_gdkpixbuf.c: update
	* w3mimg/fb/fb_img.c: update
	* w3mimg/fb/fb_img.h: update
	* w3mimg/fb/fb_imlib2.c: update
	* w3mimg/fb/fb_w3mimg.c: update
	* w3mimg/fb/fb_gdkpixbuf.h: deleted
	* w3mimg/fb/fb_imlib2.h: deleted
	* w3mimg/w3mimg.h (w3mimg_op): add get_image_size()
	* w3mimg/x11/x11_w3mimg.c: update
	* w3mimgdisplay.c (main): use get_image_size()
	* w3mimgsize.c (main): use get_image_size()

2002-07-19  Hideyuki SHIRAI <shirai@rdmg.mgcs.mei.co.jp>

	* [w3m-dev 03277] compile error on Solaris7
	* w3mimg/w3mimg.c: include <stdio.h> for NULL

2002-07-19  Yoshinobu Sakane <sakane@d4.bsd.nes.nec.co.jp>

	* [w3m-dev 03276] compile error on EWS4800